--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,17 @@ body {
   display: flex;
   place-items: center;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1c97e0;
+  border-radius: 100px;
+}
